[gd_scene load_steps=9 format=2]

[ext_resource path="res://_testenv/tests_entity_ability/unit_ability_controller/test_entab_ability_ext.gd" type="Script" id=1]
[ext_resource path="res://_dev/ddat_icon.png" type="Texture" id=2]
[ext_resource path="res://_dev/icon.png" type="Texture" id=3]
[ext_resource path="res://_testenv/tests_entity_ability/unit_ability_controller/test_entity_area_scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ddat-gpf/entity_systems/entity_ability/class_ability_controller.gd" type="Script" id=5]
[ext_resource path="res://src/ddat-gpf/entity_systems/entity_ability/class_ability_targeter.gd" type="Script" id=6]
[ext_resource path="res://src/ddat-gpf/entity_systems/classes/class_entity_area.gd" type="Script" id=7]
[ext_resource path="res://src/ddat-gpf/entity_systems/entity_extensions/class_entity_spawner.gd" type="Script" id=8]

[node name="EntityAbilityWeaponTest" type="Node2D"]
script = ExtResource( 1 )

[node name="SampleTargetSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 334, 831 )
texture = ExtResource( 2 )

[node name="CenterOfScreen" type="Position2D" parent="."]
position = Vector2( 960, 540 )

[node name="AbilityController" type="Node2D" parent="CenterOfScreen"]
script = ExtResource( 5 )
use_ability_action = "ui_accept"
target_clear_action = "ui_cancel"
min_hold_duration = 2.0
forced_activation_interval = 1.0
infinite_usages = false
max_usages = 2
refresh_delay_mode = 1
refresh_usages_time = 0.75
refresh_delay_duration = 0.25

[node name="EntityAbilityTargeter" type="Area2D" parent="CenterOfScreen/AbilityController"]
position = Vector2( -960, -540 )
script = ExtResource( 6 )
update_frequency = 0.01
reticule_mode = 1
path_to_reticule_sprite = NodePath("Reticule")

[node name="Reticule" type="Sprite" parent="CenterOfScreen/AbilityController/EntityAbilityTargeter"]
visible = false
self_modulate = Color( 1, 0.392157, 0.392157, 1 )
position = Vector2( 1200, 540 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="EntitySpawner" type="Position2D" parent="CenterOfScreen/AbilityController"]
script = ExtResource( 8 )
entity_path = NodePath("EntityArea")
entity_area_scene = ExtResource( 4 )

[node name="EntityArea" type="Area2D" parent="CenterOfScreen/AbilityController/EntitySpawner"]
visible = false
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="CenterOfScreen/AbilityController/EntitySpawner/EntityArea"]
self_modulate = Color( 1, 0.27451, 0.313726, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="RotTargetLine" type="Line2D" parent="CenterOfScreen"]
points = PoolVector2Array( 0, 0, 215, 0 )

[node name="DebugActive" type="Label" parent="."]
margin_left = 124.0
margin_top = 100.0
margin_right = 164.0
margin_bottom = 114.0
rect_scale = Vector2( 2, 2 )

[node name="DebugHistoric" type="Label" parent="."]
margin_left = 1442.0
margin_top = 84.0
margin_right = 1482.0
margin_bottom = 98.0

[node name="EnemyTest1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="EnemyTest2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="ability_cooldown_active" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_ability_cooldown_active"]
[connection signal="ability_cooldown_finished" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_ability_cooldown_finished"]
[connection signal="ability_cooldown_started" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_ability_cooldown_started"]
[connection signal="ability_refresh_active" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_ability_refresh_active"]
[connection signal="ability_usage_refreshed" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_ability_usage_refreshed"]
[connection signal="ability_usage_spent" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_ability_usage_spent"]
[connection signal="ability_usages_depleted" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_ability_usages_depleted"]
[connection signal="ability_usages_full" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_ability_usages_full"]
[connection signal="ability_warmup_active" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_ability_warmup_active"]
[connection signal="ability_warmup_finished" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_ability_warmup_finished"]
[connection signal="ability_warmup_started" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_ability_warmup_started"]
[connection signal="activate_ability" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_activate_ability"]
[connection signal="activate_ability" from="CenterOfScreen/AbilityController" to="CenterOfScreen/AbilityController/EntitySpawner" method="spawn"]
[connection signal="refresh_delay_active" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_refresh_delay_active"]
[connection signal="refresh_delay_ended" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_refresh_delay_ended"]
[connection signal="refresh_delay_started" from="CenterOfScreen/AbilityController" to="." method="_on_AbilityController_refresh_delay_started"]
